Scaling the icons :signal_strength:

--- a/src/cohome-desktop.html
+++ b/src/cohome-desktop.html
@@ -29,9 +29,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         height: 100%;
       }
 
-      iron-icons {
-        height: 35px;
-        width: 35px;
+      iron-icon {
+        --iron-icon-height: 35px;
+        --iron-icon-width: 35px;
+        /*--height: 35px;
+        width: 35px;*/
       }
 
       .icon {
